--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
+    "core-js": "^3.6.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.9",
     "morgan": "~1.9.1",
-    "pg": "^8.0.2"
+    "pg": "^8.0.2",
+    "pug": "^2.0.4"
   }
 }
