Fix test folder location

--- a/server/package.json
+++ b/server/package.json
@@ -16,5 +16,11 @@
   "devDependencies": {
     "jest": "^25.3.0",
     "supertest": "^4.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
