--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,11 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.9",
     "morgan": "~1.9.1",
     "pg": "^8.0.2",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "dotenv": "^8.2.0",
+    "make-runnable": "^1.0.1"
   },
   "devDependencies": {
     "jest": "^25.3.0",
