--- a/app/app.json
+++ b/app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "fit",
-    "slug": "fit",
+    "name": "projekt-2",
+    "slug": "projekt-2",
     "platforms": [
       "ios",
       "android",
