--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-modal": "^11.5.6",
     "react-native-picker-select": "^7.0.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
