--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "react-native"
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "2.2.2",
@@ -13,6 +17,7 @@
     "@react-navigation/native": "^5.3.0",
     "@react-navigation/stack": "^5.3.2",
     "expo": "^37.0.9",
+    "jest": "^26.0.1",
     "moment": "^2.26.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -27,7 +32,8 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-svg": "11.0.1",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-test-renderer": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
